--- a/forge-demo/src/index.html
+++ b/forge-demo/src/index.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>EyeCommander</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src data: *; style-src data: * 'unsafe-inline'; script-src * data: 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * data: 'unsafe-inline'; frame-src data: *; script-src-elem: * data:;"
+      content="default-src data: *;
+      style-src data: * 'unsafe-inline';
+      script-src * data: 'unsafe-inline' 'unsafe-eval';
+      img-src * data: 'unsafe-inline';
+      connect-src * data: 'unsafe-inline';
+      frame-src data: *;"
     />
-    <script src="./public/open-cv.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
