Fix static files

--- a/forge-demo/src/index.html
+++ b/forge-demo/src/index.html
@@ -3,15 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>EyeCommander</title>
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src data: *;
-      style-src data: * 'unsafe-inline';
-      script-src * data: 'unsafe-inline' 'unsafe-eval';
-      img-src * data: 'unsafe-inline';
-      connect-src * data: 'unsafe-inline';
-      frame-src data: *;"
-    />
+    <meta http-equiv="Content-Security-Policy" content="*" />
   </head>
   <body>
     <div id="root"></div>
