--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>EyeCommander - Windows</title>
+    <title>EyeCommander</title>
     <meta http-equiv="Content-Security-Policy" content="*" />
   </head>
   <body>
