deploy: 3f2b7ff00378b042445817fbd39602a6e17c833a

--- a/index.html
+++ b/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>EyeCommander</title>
-    <meta http-equiv="Content-Security-Policy" content="*" />
-  <script defer src="main.js"></script></head>
+    <title>CodePen - MediaPipe - Face Mesh</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.6/control_utils.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="demo.css"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils@0.3.1640029074/camera_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils@0.6.1629159505/control_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils@0.3.1620248257/drawing_utils.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh@0.4.1633559619/face_mesh.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
   <body>
-    <div id="root"></div>
+    <!-- partial:index.partial.html -->
+    <div class="container">
+      <video class="input_video"></video>
+      <div class="canvas-container">
+        <canvas class="output_canvas" width="1280px" height="720px"> </canvas>
+      </div>
+      <div class="loading">
+        <div class="spinner"></div>
+        <div class="message">Loading</div>
+      </div>
+      <a class="abs logo" href="http://www.mediapipe.dev" target="_blank">
+        <div style="display: flex; align-items: center; bottom: 0; right: 10px">
+          <img class="logo" src="logo_white.png" alt="" style="height: 50px" />
+          <span class="title">MediaPipe</span>
+        </div>
+      </a>
+      <div class="shoutout">
+        <div>
+          <a href="https://solutions.mediapipe.dev/face_mesh">
+            Click here for more info
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="control-panel"></div>
+    <!-- partial -->
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
